--- a/File Vari/style.css
+++ b/File Vari/style.css
@@ -1,5 +1,9 @@
-/*FIRST NAVBAR*/
+body{
+	background-color: red;
+  font-family: Geneva, Tahoma, Verdana, sans-serif;
+}
 
+/*FIRST NAVBAR*/
 .navbar-firstnav {
   background-color: #0066CC;
   border-color: #e7e7e7;
@@ -7,12 +11,18 @@
 .navbar-firstnav .navbar-text {
   color: #777;
 }
+
 .navbar-firstnav .navbar-nav > li > a {
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-right: 60px;
+  font-size: 20px;
   border-right: 1px solid #bbb;
   color: #fff;
 }
 
 .navbar-firstnav .navbar-nav > li:first-child > a {
+  padding-left: 60px;
   border-left: 1px solid #bbb;
   color: #fff;
 }
@@ -48,11 +58,17 @@
   color: #777;
 }
 .navbar-secondnav .navbar-nav > li {
+  padding-left: 40px;
+  padding-right: 40px;
   border-right: 1px solid #bbb;
   color: #777;
 }
+
 .navbar-brand {
+  margin-left: 7px !important;
+  margin-top: 3px !important;
   padding: 0px;
+  padding-right: 12px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -60,7 +76,7 @@
 }
 .navbar-brand > img {
   height: 100%;
-  padding: 6px;
+  padding: 5px;
   width: auto;
 }
 .navbar-secondnav .navbar-nav > li:first-child  {
@@ -92,7 +108,7 @@
     background-color: #ffffff;
     color: #0066CC;
     padding: 16px;
-    font-size: 16px;
+    font-size: 18px;
     border: none;
     cursor: pointer;
 }
@@ -103,21 +119,23 @@
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
+    display: none;position: fixed;
+    top: 108px;
+    left: 0;
     background-color: #ffffff;
-    min-width: 160px;
+    min-width: 100vw; /* The screen width */
+	min-height: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content a {
+.dropdown-content > a { 
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #ffffff}
+.dropdown-content > a:hover {background-color: #ffffff}
 
 .dropdown:hover .dropdown-content {
     display: block;
