--- a/File Vari/style.css
+++ b/File Vari/style.css
@@ -53,6 +53,7 @@ body{
   border-top: 50px solid #bbb;
   background-color: #fff;
   border-color: #e7e7e7;
+  border-radius: 0px;
 }
 .navbar-secondnav .navbar-text {
   color: #777;
@@ -65,7 +66,7 @@ body{
 }
 
 .navbar-brand {
-  margin-left: 7px !important;
+  margin-left: 9px !important;
   margin-top: 3px !important;
   padding: 0px;
   padding-right: 12px;
@@ -113,29 +114,52 @@ body{
     cursor: pointer;
 }
 
+.dropbtn: hover{
+	padding-bottom: 200px;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
 .dropdown-content {
-    display: none;position: fixed;
-    top: 108px;
-    left: 0;
-    background-color: #ffffff;
+    display: none;
+	position: fixed;
+    /*top: 108px; */
+	right:0;
+    background-color: rgba(255, 255, 255, 0.6);
     min-width: 100vw; /* The screen width */
-	min-height: 200px;
+	height: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	/* border-radius: 10px; */
+	border: 1px solid #e7e7e7;
+	text-align: center;
 }
 
-.dropdown-content > a { 
-    color: black;
+.dropdown-content > a > i {
+	color: #0066CC;
+	margin-left:30%;
+	margin-right:30%;
+	padding-bottom: 5px;
+	
+}
+
+.dropdown-content > h3 {
+	text-align: left;
+	padding-left: 120px;
+	color: #0066CC;
+}
+
+.dropdown-content > a {
+	font-size: 18px;
+    color: #777;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    padding-top: 10px;
 }
 
-.dropdown-content > a:hover {background-color: #ffffff}
+.dropdown-content > a:hover {background-color: #ffffff;}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -146,3 +170,81 @@ body{
 }
 
 /*END DROPDOWN*/
+
+
+/*clearfix hax*/
+.clearfix:after {
+    content:" ";
+    display:table;
+    clear:both;
+}
+
+/* FOOTER */
+.footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:70px;
+   width:100%;
+   background:#0066CC;
+   border-top: 2px solid #e7e7e7;
+}
+/* problem: i'm unable to change footer style! */
+.footer > p{
+	padding-left: 20px;
+	padding-top: 20px;
+	color: #ffffff;
+}
+
+/* Slider */
+    
+        /* jssor slider bullet navigator skin 05 css */
+        /*
+        .jssorb05 div           (normal)
+        .jssorb05 div:hover     (normal mouseover)
+        .jssorb05 .av           (active)
+        .jssorb05 .av:hover     (active mouseover)
+        .jssorb05 .dn           (mousedown)
+        */
+        .jssorb05 {
+            position: absolute;
+        }
+        .jssorb05 div, .jssorb05 div:hover, .jssorb05 .av {
+            position: absolute;
+            /* size of bullet elment */
+            width: 16px;
+            height: 16px;
+            background: url('img/b05.png') no-repeat;
+            overflow: hidden;
+            cursor: pointer;
+        }
+        .jssorb05 div { background-position: -7px -7px; }
+        .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
+        .jssorb05 .av { background-position: -67px -7px; }
+        .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
+
+        /* jssor slider arrow navigator skin 22 css */
+        /*
+        .jssora22l                  (normal)
+        .jssora22r                  (normal)
+        .jssora22l:hover            (normal mouseover)
+        .jssora22r:hover            (normal mouseover)
+        .jssora22l.jssora22ldn      (mousedown)
+        .jssora22r.jssora22rdn      (mousedown)
+        */
+        .jssora22l, .jssora22r {
+            display: block;
+            position: absolute;
+            /* size of arrow element */
+            width: 40px;
+            height: 58px;
+            cursor: pointer;
+            background: url('img/a22.png') center center no-repeat;
+            overflow: hidden;
+        }
+        .jssora22l { background-position: -10px -31px; }
+        .jssora22r { background-position: -70px -31px; }
+        .jssora22l:hover { background-position: -130px -31px; }
+        .jssora22r:hover { background-position: -190px -31px; }
+        .jssora22l.jssora22ldn { background-position: -250px -31px; }
+        .jssora22r.jssora22rdn { background-position: -310px -31px; }
