--- a/File Vari/style.css
+++ b/File Vari/style.css
@@ -1,5 +1,4 @@
 body{
-	background-color: red;
   font-family: Geneva, Tahoma, Verdana, sans-serif;
 }
 
@@ -14,7 +13,6 @@ body{
 
 .navbar-firstnav .navbar-nav > li > a {
   padding-left: 60px;
-  padding-right: 60px;
   padding-right: 60px;
   font-size: 20px;
   border-right: 1px solid #bbb;
@@ -44,6 +42,41 @@ body{
   color: #ccc;
   background-color: transparent;
 }
+
+/*COSE INSERITE PER PROVA DA QUI*/
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: rgba(255, 255, 255, 0.6);
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.navbar-toggle:focus {
+  outline: 0;
+}
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #0066CC;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+@media (min-width: 768px) {
+  .navbar-toggle {
+    display: none;
+  }
+}
+
+/*A QUI*/
 
 /*END FIRST NAVBAR*/
 
@@ -128,7 +161,7 @@ body{
 	position: fixed;
     /*top: 108px; */
 	right:0;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.85);
     min-width: 100vw; /* The screen width */
 	height: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -168,6 +201,45 @@ body{
 .dropdown:hover .dropbtn {
     background-color: #ffffff;
 }
+
+/*COSE INSERITE PER PROVA DA QUI*/
+
+.col-sm-9 > h3 {
+	text-align: left;
+	padding-left: 120px;
+	color: #0066CC;
+}
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+}
+
+.col-sm-9 {
+	width: 90%; /*potrebbe non essere necessario, da valutare*/
+}
+
+.col-sm-2 > a {
+	font-size: 18px;
+    color: #777;
+    padding: 12px 16px;
+    padding-top: 10px;
+}
+
+.col-sm-2 > a > i{
+	color: #0066CC;
+	margin-left:30%;
+	margin-right:30%;
+	padding-bottom: 5px;	
+}
+
+/*A QUI*/
 
 /*END DROPDOWN*/
 
@@ -214,7 +286,7 @@ body{
             /* size of bullet elment */
             width: 16px;
             height: 16px;
-            background: url('img/b05.png') no-repeat;
+            background: url('./slider/img/b05.png') no-repeat;
             overflow: hidden;
             cursor: pointer;
         }
@@ -239,7 +311,7 @@ body{
             width: 40px;
             height: 58px;
             cursor: pointer;
-            background: url('img/a22.png') center center no-repeat;
+            background: url('./slider/img/a22.png') center center no-repeat;
             overflow: hidden;
         }
         .jssora22l { background-position: -10px -31px; }
