--- a/File Vari/style.css
+++ b/File Vari/style.css
@@ -5,7 +5,7 @@ body{
 /*FIRST NAVBAR*/
 .navbar-firstnav {
   background-color: #0066CC;
-  border-color: #e7e7e7;
+  border-color: #777;
 }
 .navbar-firstnav .navbar-text {
   color: #777;
@@ -85,7 +85,7 @@ body{
 .navbar-secondnav {
   border-top: 50px solid #bbb;
   background-color: #fff;
-  border-color: #e7e7e7;
+  border-color: #777;
   border-radius: 0px;
 }
 .navbar-secondnav .navbar-text {
@@ -166,7 +166,7 @@ body{
 	height: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	/* border-radius: 10px; */
-	border: 1px solid #e7e7e7;
+	border: 1px solid #777;
 	text-align: center;
 	z-index: 1;
 }
@@ -283,7 +283,7 @@ body{
    height:70px;
    width:100%;
    background:#0066CC;
-   border-top: 2px solid #e7e7e7;
+   border-top: 2px solid #777;
 }
 /* problem: i'm unable to change footer style! */
 .footer > p{
@@ -344,3 +344,69 @@ body{
         .jssora22r:hover { background-position: -190px -31px; }
         .jssora22l.jssora22ldn { background-position: -250px -31px; }
         .jssora22r.jssora22rdn { background-position: -310px -31px; }
+
+/* carousel of devices */
+
+/* NON RIESCO A CAMBIARE LE DIMENSIONI DI STE MALEDETTE IMMAGINI!!!!! Nè SETTARE PADDING O ALTRO. DA GUARDARE
+
+.carousel-inner > img{
+	height: 290px !important;
+	width: 100px !important;
+}
+*/
+.carousel-inner .active.left { left: -33%; }
+.carousel-inner .next        { left:  33%; }
+.carousel-inner .prev        { left: -33%; }
+.carousel-control.left,.carousel-control.right {background-image:none;}
+.item:not(.prev) {visibility: visible;}
+.item.right:not(.prev) {visibility: hidden;}
+.rightest{ visibility: visible;}
+		
+/* Spotify add */
+.adv {
+	display:flex;
+    align-items:center;
+	border-bottom: 1px solid #777;
+	border-top: 1px solid #777;
+}
+.adv > img{
+	
+	float:right;
+	width: 70vw;
+	height: 400px;
+}
+.adv > span {
+	text-align: center;
+	padding-left: 40px;
+}
+
+.adv > span > span{
+	font-size: 22px;
+	color: #777;
+}
+
+.adv > span > h3{
+	color: #0066CC;
+}
+
+.adv > span > button{
+	margin-top:20px;
+	border-radius: 10px;
+	background-color: #fff;
+    border: 2px solid #0066CC;
+    color: #0066CC;
+    padding: 10px 28px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+/* footer to add in html 
+<!--FOOTER-->
+	<div class="footer">
+        <footer>
+            <p>Copyright &copy; M-Mobile 2016</p>
+        </footer>
+    </div>
+<!--END FOOTER-->
+*/
