--- a/File Vari/style2.css
+++ b/File Vari/style2.css
@@ -7,31 +7,39 @@ body{
 .navbar-firstnav {
   background-color: #0066CC;
 }
-.navbar-firstnav .navbar-text {
-  color: #777;
-}
 
 .navbar-firstnav .navbar-nav > li > a {
-  padding-left: 20px;
-  padding-right: 40px;
+  /*padding-left: 20px;
+  padding-right: 40px;*/
+  text-align:center;
   font-size: 20px;
   color: #fff;
+}
+.nav >li{
+	display: inline-block;
+}
+
+@media (min-width: 768px) {
+  .navbar-firstnav .navbar-nav > li {
+    float: left !important;
+  }
 }
 
 .navbar-firstnav .navbar-nav > li > a:hover,
 .navbar-firstnav .navbar-nav > li > a:focus {
-  color: #bbb ;
+  color: #c5d6e7;
   background-color: transparent;
 }
-.navbar-firstnav .navbar-nav > .active > a,
-.navbar-firstnav .navbar-nav > .active > a:hover,
-.navbar-firstnav .navbar-nav > .active > a:focus {
-  color: #555;
-  background-color: #e7e7e7;
+
+.navbar-firstnav .navbar-nav > li > .active,
+.navbar-firstnav .navbar-nav > li > .active:hover,
+.navbar-firstnav .navbar-nav > li > .active:focus {
+  padding-bottom:10px;
+  border-bottom: 5px solid #fff;
 }
-.navbar-firstnav .navbar-nav > .disabled > a,
-.navbar-firstnav .navbar-nav > .disabled > a:hover,
-.navbar-firstnav .navbar-nav > .disabled > a:focus {
+.navbar-firstnav .navbar-nav > li > .disabled,
+.navbar-firstnav .navbar-nav > li >.disabled:hover,
+.navbar-firstnav .navbar-nav > li > .disabled:focus {
   color: #ccc;
   background-color: transparent;
 }
@@ -83,8 +91,7 @@ body{
   color: #777;
 }
 .navbar-secondnav .navbar-nav > li {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 2vw;
   color: #777;
 }
 
@@ -106,7 +113,7 @@ body{
 
 .navbar-secondnav .navbar-nav > li > a:hover,
 .navbar-secondnav .navbar-nav > li > a:focus {
-  color: #777;
+  color: #74a5d8;
   background-color: transparent;
 }
 .navbar-secondnav .navbar-nav > .active > a,
@@ -182,22 +189,6 @@ body{
     clear:both;
 }
 
-/* FOOTER */
-.footer {
-   position:relative;
-   left:0px;
-   bottom:0px;
-   height:70px;
-   width:100%;
-   background:#0066CC;
-   border-top: 2px solid #777;
-}
-/* problem: i'm unable to change footer style! */
-.footer > p{
-	padding-left: 20px;
-	padding-top: 20px;
-	color: #ffffff;
-}
 
 /* Slider */
     
@@ -256,6 +247,18 @@ body{
 
 /* NON RIESCO A CAMBIARE LE DIMENSIONI DI STE MALEDETTE IMMAGINI!!!!! Nè SETTARE PADDING O ALTRO. DA GUARDARE*/
 
+.carousel-title{
+	font-size: 24px;
+	margin-top: 20px;
+	margin-left: 30px;
+	color: #0066CC;
+}
+
+.carousel{
+	top: 20px;
+	margin-bottom: 70px;
+}
+
 .carousel-inner .col-sm-4 > a {
 	text-align: center;
 }
@@ -286,15 +289,15 @@ IMG.img-responsive{
 
 /* Spotify add */
 .adv {
-	position: relative;
+	margin: auto;
+	width: 80vw;
 	display:flex;
     align-items:center;
-	border-bottom: 1px solid #777;
-	border-top: 1px solid #777;
+	padding-bottom: 30px;
 }
 .adv > img{
 	float:right;
-	width: 70vw;
+	width: 60vw;
 	height: 400px;
 }
 .adv > div {
@@ -328,7 +331,7 @@ IMG.img-responsive{
 	margin-top:20px;
 	border-radius: 10px;
 	background-color: #fff;
-    border: 2px solid #0066CC;
+    border: 1px solid #0066CC;
     color: #0066CC;
     padding: 10px 28px;
     text-align: center;
@@ -336,12 +339,19 @@ IMG.img-responsive{
     font-size: 18px;
 }
 
-/* footer to add in html 
-<!--FOOTER-->
-	<div class="footer">
-        <footer>
-            <p>Copyright &copy; M-Mobile 2016</p>
-        </footer>
-    </div>
-<!--END FOOTER-->
-*/
+/* FOOTER */
+.footer {
+   position:relative;
+   left:0;
+   bottom:0;
+   right:0;
+   height:70px;
+   background:#0066CC;
+}
+
+.footer > p {
+	font-size:20px;
+	padding-left: 20px;
+	padding-top: 20px;
+	color: #fff;
+}
