--- a/File Vari/style2.css
+++ b/File Vari/style2.css
@@ -1,3 +1,4 @@
+
 body{
   font-family: Arial Unicode MS, sans-serif;
   padding-top: 106px;
@@ -9,8 +10,6 @@ body{
 }
 
 .navbar-firstnav .navbar-nav > li > a {
-  /*padding-left: 20px;
-  padding-right: 40px;*/
   text-align:center;
   font-size: 20px;
   color: #fff;
@@ -23,6 +22,7 @@ body{
   .navbar-firstnav .navbar-nav > li {
     float: left !important;
   }
+  
 }
 
 .navbar-firstnav .navbar-nav > li > a:hover,
@@ -91,7 +91,7 @@ body{
   color: #777;
 }
 .navbar-secondnav .navbar-nav > li {
-  padding-left: 2vw;
+  padding-left: 3vw;
   color: #777;
 }
 
@@ -160,25 +160,12 @@ body{
 	border-bottom: 5px solid white;
 }
 
-@media ( max-width: 768px ){
-	
-	.dropdown{
-		width: 100%;
-	}
-	
-	.navbar-nav .open .dropdown-menu {
-		border-top: 2px solid #bbb;
-		border-bottom: 2px solid #bbb;
-	}
-	
+@media ( max-width: 1000px ){
 	.navbar-secondnav .navbar-nav > li{
-		padding: 0px;
-	}
-	
-	.open > .dropdown-toggle{
-		border-bottom: none;
+		padding-left: 0px;
 	}
 }
+
 
 /*END SECOND NAVBAR*/
 
@@ -245,10 +232,8 @@ body{
 
 /* carousel of devices */
 
-/* NON RIESCO A CAMBIARE LE DIMENSIONI DI STE MALEDETTE IMMAGINI!!!!! Nè SETTARE PADDING O ALTRO. DA GUARDARE*/
-
 .carousel-title{
-	font-size: 24px;
+	font-size: 1.5px;
 	margin-top: 20px;
 	margin-left: 30px;
 	color: #0066CC;
@@ -259,85 +244,109 @@ body{
 	margin-bottom: 70px;
 }
 
-.carousel-inner .col-sm-4 > a {
+/* Thumbnail Box */
+
+.thumbnail{
+	border: 0px;
+}
+
+.caption{
 	text-align: center;
 }
-
-IMG.img-responsive{
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
-	max-height: 300px;
+.caption h4 {
+    color: #0066cc;
 }
 
-.carousel-inner {
-	width: 70%;
-	max-height: 450px;
-	margin: auto;
+.caption p {  
+    color: #0066cc;
+	font-size: 16px;
 }
 
-.carousel-inner .active.left { left: -33%; }
-.carousel-inner .next        { left:  33%; }
-.carousel-inner .prev        { left: -33%; }
+/* Carousel Control */
 .carousel-control.left,.carousel-control.right {background-image:none;}
 .carousel-control.left > i,.carousel-control.right > i{
 	color: #777;
 }
-.item:not(.prev) {visibility: visible;}
-.item.right:not(.prev) {visibility: hidden;}
-.rightest{ visibility: visible;}
+
+.carousel-inner {
+	width: 100%;
+	margin: auto;
+}
+
+ul.thumbnails { 
+    margin-bottom: 0px;
+}
+/* Mobile Only */
+@media (max-width: 767px) {
+    .page-header, .control-box {
+        text-align: center;
+    } 
+}
+@media (max-width: 479px) {
+    .caption {
+        word-break: break-all;
+    }
+}
+
+li { list-style-type:none;}
 
 /* Spotify add */
 .adv {
 	margin: auto;
-	width: 80vw;
+	width: 90vw;
 	display:flex;
     align-items:center;
 	padding-bottom: 30px;
 }
 .adv > img{
 	float:right;
+	padding-right: 2vw;
 	width: 60vw;
-	height: 400px;
+	height: 30vw;
 }
 .adv > div {
 	text-align: center;
-	padding-left: 40px;
 }
 
-.adv > span > span{
-	font-size: 22px;
+.advtext{
+	font-size: 1.5vw;
 	color: #777;
-}
-.adv > div > div{
-	font-size: 22px;
-	color: #777;
-}
-.adv > div > span{
-	font-size: 22px;
-	color: #777;
-}
-
-.adv > span > h3{
-	color: #0066CC;
 }
 
 .adv > div > h3{
 	color: #0066CC;
+	font-size: 2.5vw;
 }
 
 
-.adv > div > button{
-	margin-top:20px;
-	border-radius: 10px;
-	background-color: #fff;
-    border: 1px solid #0066CC;
-    color: #0066CC;
-    padding: 10px 28px;
+.btn {
+    font-size: 1.125em;
+    white-space: nowrap;
+    width: 80%;
+    padding: 0.69em 1.5em;
+    line-height: 1.125em;
+    display: inline-block;
+    color: #fff;
     text-align: center;
-    text-decoration: none;
-    font-size: 18px;
+    -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
+    transition: border .25s linear, color .25s linear, background-color .25s linear;
 }
+
+
+.btn.btn-blue{
+	background-color: #237fbc;
+	border-color: #237fbc;
+	-webkit-box-shadow: 0 3px 0 #1a5c87;
+	box-shadow: 0 3px 0 #1a5c87;
+}
+.btn.btn-blue:hover{background-color:#166ea8;
+	color:#c5d6e7;}
+.btn.btn-blue:active{
+	top: 3px; outline: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 
 /* FOOTER */
 .footer {
@@ -354,4 +363,53 @@ IMG.img-responsive{
 	padding-left: 20px;
 	padding-top: 20px;
 	color: #fff;
+}
+
+@media ( max-width: 766px ){
+	
+	.dropdown{
+		width: 100%;
+	}
+	
+	.navbar-nav .open .dropdown-menu {
+		border-top: 1px solid #bbb;
+		border-bottom: 1px solid #bbb;
+	}
+	
+	.navbar-secondnav .navbar-nav > li{
+		padding-left: 0px;
+	}
+	
+	.open > .dropdown-toggle{
+		border-bottom: none;
+	}
+	
+	.navbar-firstnav .navbar-nav > li > a{
+	  font-size:18px;
+    }
+	
+	.carousel-inner {
+		width: 85%;
+	}
+	
+	.footer > p {
+		font-size: 16px;
+	}
+	
+	.btn {
+		font-size: 2.5vw;
+	}
+	
+	.advtext{
+		display:none;
+	}
+	
+	.adv > div > h3{
+		font-size: 5vw;
+	}
+	
+	.adv > img{
+		width: 50vw;
+		padding-right: 0px;
+	}
 }
