--- a/File Vari/style2.css
+++ b/File Vari/style2.css
@@ -85,6 +85,7 @@ body{
   top: 50px;
   background-color: #fff;
   border-radius: 0px;
+  border-bottom:1px solid #f8f8f8;
 }
 
 .navbar-secondnav .navbar-text {
@@ -281,11 +282,19 @@ ul.thumbnails {
     .page-header, .control-box {
         text-align: center;
     } 
+	
+	ul.thumbnails { 
+		width: 80%;
+	}
 }
-@media (max-width: 479px) {
+@media (max-width: 495px) {
     .caption {
         word-break: break-all;
     }
+	
+	ul.thumbnails { 
+		width: 100%;
+	}
 }
 
 li { list-style-type:none;}
@@ -299,13 +308,14 @@ li { list-style-type:none;}
 	padding-bottom: 30px;
 }
 .adv > img{
-	float:right;
-	padding-right: 2vw;
+	float:left;
+	padding-right: 4vw;
 	width: 60vw;
 	height: 30vw;
 }
 .adv > div {
 	text-align: center;
+	padding-right: 4vw;
 }
 
 .advtext{
@@ -372,8 +382,7 @@ li { list-style-type:none;}
 	}
 	
 	.navbar-nav .open .dropdown-menu {
-		border-top: 1px solid #bbb;
-		border-bottom: 1px solid #bbb;
+		background-color: #e9f0f6;
 	}
 	
 	.navbar-secondnav .navbar-nav > li{
@@ -397,19 +406,34 @@ li { list-style-type:none;}
 	}
 	
 	.btn {
-		font-size: 2.5vw;
+		font-size: 4vw;
+	}
+	
+	.adv{
+		display:block;
+		margin:0;
+	}
+	
+	.adv> div{
+		padding-right:0;
+		position:center;
+	}
+	
+	.adv > img{
+		float:center;
+		width: 100%;
+		height:40vw;
+		padding-bottom: 3vw;
+		padding-right:0;
 	}
 	
 	.advtext{
-		display:none;
+		font-size: 4vw;
 	}
 	
 	.adv > div > h3{
 		font-size: 5vw;
 	}
 	
-	.adv > img{
-		width: 50vw;
-		padding-right: 0px;
-	}
+	
 }
