--- a/File Vari/style2.css
+++ b/File Vari/style2.css
@@ -149,6 +149,13 @@ body{
 	color: #085394;
 }
 
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+    color: #fff;
+    text-decoration: none;
+    background-color: #085394;
+    outline: 0;
+}
+
 .menu-title {
 	border-bottom: 1px solid #085394;
 }
