--- a/File Vari/smartlifeservices.css
+++ b/File Vari/smartlifeservices.css
@@ -2,6 +2,15 @@
 	border-bottom: 5px solid #085394;
 }
 
+.breadcrumb{
+	font-size: 16px;
+	padding-left: 5vw;
+	border-bottom: 2px solid #eee;
+	border-top: 2px solid #eee;
+	background-color: #fff;
+	margin-bottom:0px;
+}
+
 .allsmartlife > div > img{
 	width:100%;
 	height:35vw;
