--- a/File Vari/devicecontent.css
+++ b/File Vari/devicecontent.css
@@ -35,6 +35,8 @@
 }
 
 .btn {
+	font-size: 1.125vw;
+    padding: 0.69vw 1.5vw;
 	width: 30%;
 	float:right;
 	margin-right: 7vw;
@@ -54,6 +56,8 @@
 	color: #085394;
 	padding-left: 1.5vw;
 	padding-bottom: 1vw;
+	font-size: 1.7vw;
+	margin-bottom:1vw;
 }
 
 table {
@@ -66,8 +70,25 @@ td, .assistanceservice > a, .slservice > a {
 	padding-bottom: 1vw;
 	padding-left: 2vw;
 	font-size: 1.3vw;
-    text-align: left;
-    padding-right: 8vw;
 }
 
+td{
+	width:50%;
+}
+
+@media (max-width: 767px){
+	
+	.breadcrumb{
+		border-top: 0px;
+	}
+	
+	.btn, td, .assistanceservice > a, .slservice > a, .devicename, .speclist > li,.breadcrumb{
+		font-size: 2.3vw;
+	}
+	
+	.techspecs > legend, .assistanceservice > legend, .slservice > legend{
+		font-size: 2.6vw;
+		margin-bottom: 1.2vw;
+	}
+}
 
