--- a/File Vari/devicegrid.css
+++ b/File Vari/devicegrid.css
@@ -1,3 +1,18 @@
+.breadcrumb{
+	font-size: 16px;
+	padding-left: 5vw;
+	border-bottom: 2px solid #eee;
+	border-top: 2px solid #eee;
+	background-color: #fff;
+	margin-bottom:0px;
+}
+
+@media (max-width: 767px){
+	.breadcrumb{
+		border-top: 0px;
+		font-size: 2.3vw;
+	}
+}
 
 .container-fluid.devicecontainer{
 	margin-bottom: 5vw;
