--- a/File Vari/style2.css
+++ b/File Vari/style2.css
@@ -1,7 +1,29 @@
 
 body{
-  font-family: Arial Unicode MS, sans-serif;
+	/*
+  font-family: Arial Unicode MS, sans-serif;*/
+  font-family: 'Open Sans', sans-serif;
   padding-top: 106px;
+}
+
+.disabled{
+	cursor: not-allowed;
+}
+
+.breadcrumb{
+	font-size: 16px;
+	padding-left: 5vw;
+	border-bottom: 2px solid #eee;
+	border-top: 2px solid #eee;
+	background-color: #fff;
+	margin-bottom:0px;
+}
+
+@media (max-width: 767px){
+	.breadcrumb{
+		border-top: 0px;
+		font-size: 2.3vw;
+	}
 }
 
 /*FIRST NAVBAR*/
@@ -370,18 +392,52 @@ li { list-style-type:none;}
    position:relative;
    left:0;
    bottom:0;
-   right:0;
-   height:70px;
+   height:100px;
    background:#085394;
 }
 
-.footer > p {
-	font-size:20px;
-	padding-left: 20px;
-	padding-top: 20px;
+.footer > div > .row >.col-sm-4 > p {
+	padding-top: 2vw;
+	font-size:2vw;
+	text-align:center;
 	color: #fff;
 }
 
+.footer > div > .row >.col-sm-4 > h4{
+	padding-top: 0.5vw;
+	padding-left: 2vw;
+	font-weight: bold;
+	font-size: 1.2vw;
+	color: #fff;
+}
+
+.footer > div > .row >.col-sm-4 > ul > li > a, .footer > div > .row >.col-sm-4 > ul > li > i{
+	
+	color:#fff;
+	font-size: 1.2vw;
+}
+
+@media ( max-width: 766px ){
+	.footer {
+		height:70px;
+	}
+	
+	.footer > div > .row >.col-sm-4{
+		width:30%;
+	}
+	
+	.footer > div > .row >.col-sm-4 > h4{
+		display:none;
+		padding-left: 0;
+	}
+	
+	.footer > div > .row >.col-sm-4 > ul > li{
+		
+	}
+	
+}
+
+/* END FOOTER */
 @media ( max-width: 766px ){
 	
 	.dropdown{
@@ -392,8 +448,8 @@ li { list-style-type:none;}
 		background-color: #e9f0f6;
 	}
 	
-	.navbar-secondnav .navbar-nav > li{
-		padding-left: 0px;
+	.navbar-first .navbar-nav > div > ul{
+		padding-left: 2vw;
 	}
 	
 	.open > .dropdown-toggle{
@@ -401,15 +457,14 @@ li { list-style-type:none;}
 	}
 	
 	.navbar-firstnav .navbar-nav > li > a{
-	  font-size:18px;
+	  font-weight: bold;
+	  font-size:15px;
+	  padding-left:1vw;
+	  padding-right: 1vw;
     }
 	
 	.carousel-inner {
 		width: 85%;
-	}
-	
-	.footer > p {
-		font-size: 16px;
 	}
 	
 	.btn {
@@ -421,7 +476,7 @@ li { list-style-type:none;}
 		margin:0;
 	}
 	
-	.adv> div{
+	.adv > div{
 		padding-right:0;
 		position:center;
 	}
