--- a/File Vari/Separated files/footer.css
+++ b/File Vari/Separated files/footer.css
@@ -3,18 +3,18 @@
    position:relative;
    left:0;
    bottom:0;
-   height:100px;
+   height:150px;
    background:#085394;
 }
 
-.footer > div > .row >.col-sm-4 > p {
+.footer .col-xs-4 > p {
 	padding-top: 2vw;
 	font-size:2vw;
 	text-align:center;
 	color: #fff;
 }
 
-.footer > div > .row >.col-sm-4 > h4{
+.footer .col-xs-4 > h4{
 	padding-top: 0.5vw;
 	padding-left: 2vw;
 	font-weight: bold;
@@ -22,30 +22,29 @@
 	color: #fff;
 }
 
-.footer > div > .row >.col-sm-4 > ul > li > a, .footer > div > .row >.col-sm-4 > ul > li > i{
-	
+.footer .col-xs-4 > ul > li > a, 
+.footer .col-xs-4 > ul > li > i{
 	color:#fff;
+	font-size: 1.2vw;
+}
+
+ul{
 	font-size: 1.2vw;
 }
 
 @media ( max-width: 766px ){
 	.footer {
-		height:70px;
+		height:50px;
 	}
 	
-	.footer > div > .row >.col-sm-4{
-		width:30%;
-	}
-	
-	.footer > div > .row >.col-sm-4 > h4{
+	.footer > div > .row >.col-xs-4 > h4{
 		display:none;
 		padding-left: 0;
 	}
 	
-	.footer > div > .row >.col-sm-4 > ul > li{
-		
+	ul{
+		-webkit-padding-start: 2vw;
 	}
-	
 }
 
 /* END FOOTER */
